Tune Flatpak performance: Brave GPU flags and IntelliJ 10GB heap
Brave was burning ~44% CPU across renderer processes with software
compositing. Added brave-flags.conf enabling Vulkan, Skia Graphite,
and GPU compositing to offload rendering to the AMD Radeon 880M.

IntelliJ was using ~33% CPU at idle due to frequent GC on the default
2GB heap. Increased to 10GB with ZGC (low-latency collector) via
IDEA_VM_OPTIONS Flatpak env override.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>